feat: delivery of several features

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "husky": "^8.0.2"
   },
   "scripts": {
-    "test": "cross-env PYTHON=python python ./run.py",
+    "sir": "cross-env PYTHON=python python ./run.py",
     "dependencies": "pip install requests termcolor emoji pyyaml"
   },
   "config": {
